--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
   "main": "app.js",
   "repository": "https://github.com/MonokiniNeko/realtimechat-backend/",
   "author": "MonokiniNeko <halasz.gwenael@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "socket.io": "^4.2.0"
+  }
 }
